--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -34,6 +34,7 @@
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewired": "^2.1.3",
     "react-autosuggest": "^9.4.3",
+    "react-beautiful-dnd": "^11.0.5",
     "react-chartjs-2": "^2.7.6",
     "react-color": "^2.17.3",
     "react-countup": "^4.2.2",
